Prepare for bower registration of idilia-specific version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "trip.js",
-  "version": "3.3.3",
+  "name": "idilia.trip.js",
+  "version": "3.3.3-idilia",
   "author": {
     "name": "EragonJ",
     "email": "eragonj@eragonj.me",
