--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "Trip.js",
-  "version": "3.3.3",
+  "name": "idilia.Trip.js",
+  "version": "3.3.3-idilia",
   "homepage": "https://github.com/EragonJ/Trip.js",
   "authors": [
     "EragonJ <eragonj@eragonj.me> (http://eragonj.me)"
