--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "trip.js",
-  "version": "3.1.5",
+  "name": "idilia.trip.js",
+  "version": "3.1.5-idilia",
   "author": {
     "name": "EragonJ",
     "email": "eragonj@eragonj.me",
