--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "idilia.trip.js",
-  "version": "3.1.6-idilia",
+  "version": "3.1.6",
   "homepage": "https://github.com/EragonJ/Trip.js",
   "authors": [
     "EragonJ <eragonj@eragonj.me> (http://eragonj.me)"
