--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "idilia.trip.js",
-  "version": "3.3.5-idilia",
+  "version": "3.3.6",
   "author": {
     "name": "EragonJ",
     "email": "eragonj@eragonj.me",
